libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__data-export-type-object.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected a data source export type (string, integer, float, boolean, or array), got keyword "object" at 2:12
	  2 | export id: object }
	    |            ^
	- parse error: missing required 'version' directive
